@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.49 2004/10/11 21:15:48 abs Exp $
+# $NetBSD: Makefile,v 1.50 2004/12/28 02:47:50 reed Exp $
 
 DISTNAME=       jakarta-tomcat-${TOMCAT_VERSION}
-PKGREVISION=	1
 CATEGORIES=	www java
 # The list of sites to download is generated by a jakarta website.
 # The getsite.sh script parses the HTML and extracts the urls.
@@ -11,7 +10,7 @@ MAINTAINER=	erh@NetBSD.org
 HOMEPAGE=	http://jakarta.apache.org/tomcat/
 COMMENT=	The Apache Project's Java Servlet 2.4 and JSP 2.0 server
 
-TOMCAT_VERSION=	5.0.28
+TOMCAT_VERSION=	5.0.30
 
 # This needs java 1.4 or higher.
 USE_JAVA2=	yes
